Fixed minor navigation bar z-index issue

--- a/public/style/screen.css
+++ b/public/style/screen.css
@@ -696,6 +696,7 @@ hr {
 		padding-inline: calc(5vw - 1em);
 		position: sticky;
 		inset-block-start: 0;
+		z-index: 1;
 	}
 		.navigation ul {
 			display: flex;
